feat(backend): make seat cart fully Redis-based (access grants + reserved/blocked mirror)
Removes both DB reads from the seat cart hot path (per-click allowance
check and seat-availability check), replacing them with a Redis-only
design:

- Access grants: EventService mints a per-(event,user) Redis grant while
  building GET /api/user/events (reusing the allowance query it already
  runs), refreshed on every successful cart write. addSeatToCart checks
  only Redis for this grant - no DB fallback - and rejects with the new
  SeatCartAccessNotGrantedException (409) if missing or expired.
- Reserved/blocked mirror: seat keys now also carry RESERVED/BLOCKED
  sentinels mirroring persisted reservation status, populated lazily
  once per event (guarded by a short-lived Redis lock, with a one-off
  direct DB check as fallback under lock contention) and kept in sync by
  every write path that changes reservation status: user and manager
  reservation creation/cancellation, and manager seat blocking.

Updates the stale 404 API docs for the old allowance-check design to the
new 409 semantics.